force-app/main/default/objects/B25__Custom_Buttons__c/B25__Custom_Buttons__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Used for showing custom buttons on the reservation form.</description>
    <label>Custom Buttons</label>
</CustomObject>