force-app/main/default/objects/B25__Custom_Buttons__c/fields/B25__Executable_Class_Name__c.field-meta.xml
<CustomField>
    <fullName>B25__Executable_Class_Name__c</fullName>
    <label>Executable Class Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>