force-app/main/default/objects/B25__Custom_Buttons__c/fields/B25__Flow_Name__c.field-meta.xml
<CustomField>
    <fullName>B25__Flow_Name__c</fullName>
    <label>Flow Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>