force-app/main/default/objects/B25__Custom_Buttons__c/fields/B25__Hide_On_Edit__c.field-meta.xml
<CustomField>
    <fullName>B25__Hide_On_Edit__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Hide the button on the form while the user is editing the Reservation.</description>
    <inlineHelpText>Hide the button on the form while the user is editing the Reservation.</inlineHelpText>
    <label>Hide On Edit</label>
    <type>Checkbox</type>
</CustomField>