force-app/main/default/objects/B25__Custom_Buttons__c/fields/B25__Only_Show_On_Recurring_Reservations__c.field-meta.xml
<CustomField>
    <fullName>B25__Only_Show_On_Recurring_Reservations__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked this button will only appear if the selected reservation is recurring.</description>
    <inlineHelpText>When checked this button will only appear if the selected reservation is recurring.</inlineHelpText>
    <label>Only Show On Recurring Reservations</label>
    <type>Checkbox</type>
</CustomField>