force-app/main/default/objects/B25__Custom_Buttons__c/fields/B25__Open_in_new_window__c.field-meta.xml
<CustomField>
    <fullName>B25__Open_in_new_window__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Open in new window</label>
    <type>Checkbox</type>
</CustomField>