force-app/main/default/objects/B25__Custom_Buttons__c/fields/B25__URL__c.field-meta.xml
<CustomField>
    <fullName>B25__URL__c</fullName>
    <label>URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>